Front da tela de cadastro concluído!

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "dev/treinamento",
+    "description": "description",
     "autoload":{
         "psr-4":{
             "App\\":"classes/"
