--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "description",
     "autoload":{
         "psr-4":{
-            "App\\":"classes/"
+            "classes\\":"classes/"
 
 
         }
